--- a/Places to Eat And Drink on Campus/Base.lproj/Main.storyboard
+++ b/Places to Eat And Drink on Campus/Base.lproj/Main.storyboard
@@ -57,13 +57,73 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="myMap" destination="2rH-wO-USW" id="5sf-xW-fjf"/>
-                        <outlet property="theTable" destination="hnP-ae-vur" id="EFq-qg-Ybr"/>
+                        <outlet property="myMap" destination="2rH-wO-USW" id="V3n-HK-cHg"/>
+                        <outlet property="theTable" destination="hnP-ae-vur" id="SX0-sn-Ruk"/>
+                        <segue destination="J1g-ex-NSD" kind="show" identifier="toDetail" id="0BK-Hq-MeZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="119.84732824427481" y="-34.507042253521128"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="ZLe-a7-Obr">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="J1g-ex-NSD" customClass="DetailViewController" customModule="Places_to_Eat_And_Drink_on_Campus" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="DetailViewController" id="cJ8-P3-pbe">
+                        <rect key="frame" x="0.0" y="0.0" width="402" height="864"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVe-LA-ad7">
+                                <rect key="frame" x="16" y="59" width="349" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hn1-ci-5xG">
+                                <rect key="frame" x="16" y="113" width="331" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Onu-oq-xau">
+                                <rect key="frame" x="16" y="148" width="349" height="152"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="30" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UoB-nJ-jgw">
+                                <rect key="frame" x="16" y="308" width="349" height="370"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="TopLeft" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4G4-Nx-XB9">
+                                <rect key="frame" x="100" y="703" width="203" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VlQ-ng-YxU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jKQ-FS-cLl"/>
+                    <connections>
+                        <outlet property="buildingLabel" destination="Hn1-ci-5xG" id="uEO-5c-bpI"/>
+                        <outlet property="descriptionLabel" destination="UoB-nJ-jgw" id="WEU-tw-Vds"/>
+                        <outlet property="nameLabel" destination="UVe-LA-ad7" id="n1h-oy-H5y"/>
+                        <outlet property="openingTimesLabel" destination="Onu-oq-xau" id="cDh-Tt-oei"/>
+                        <outlet property="urlButton" destination="4G4-Nx-XB9" id="SFF-DT-eW2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bdL-TJ-LUS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1091.044776119403" y="-24.027459954233407"/>
         </scene>
     </scenes>
     <resources>
