Your commit message

--- a/Places to Eat And Drink on Campus/Base.lproj/Main.storyboard
+++ b/Places to Eat And Drink on Campus/Base.lproj/Main.storyboard
@@ -103,10 +103,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="TopLeft" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4G4-Nx-XB9">
-                                <rect key="frame" x="100" y="703" width="203" height="35"/>
+                                <rect key="frame" x="100" y="686" width="203" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXB-T6-ZpO">
+                                <rect key="frame" x="321" y="70" width="55" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Like"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VlQ-ng-YxU"/>
